# Data-Analysis-Identifiers

./: SBOMvisualizer.py  dep_graph.py  edges.py  main.py
go-query/: go.mod  go.sum  main.go  mygraph.gv
guac-data-hassboms/: sbom100.json  sbom1000.json  sbom1001.json  sbom1002.json  sbom1003.json  sbom1005.json  sbom1006.json  sbom1008.json  sbom101.json  sbom1010.json  sbom1011.json  sbom1013.json  sbom1017.json  sbom1019.json  sbom102.json  sbom1020.json  sbom1023.json  sbom1024.json  sbom1027.json  sbom1029.json  sbom1030.json  sbom1031.json  sbom1032.json  sbom1034.json  sbom1036.json  sbom1038.json  sbom1039.json  sbom104.json  sbom1041.json  sbom1042.json  sbom1043.json  sbom1046.json  sbom105.json  sbom1052.json  sbom1053.json  sbom106.json  sbom108.json  sbom11.json  sbom110.json  sbom111.json  (+542 more)
helpers/: __init__.py  helpers.py
networkx_env/: pyvenv.cfg
py-visualize/: main.py  pyproject.toml  requirements.txt  setup.py
py-visualize/dependency_visualizer/: __init__.py  dependency_visualizer.py
py-visualize/schemas/: __init__.py  artifact.py  identifierEdge.py  package.py
schemas/: hasmetadata.py  identifierNode.py
test/: sbom178.json  sbom179.json  sbom201.json  sbom564.json  sbom682.json
test2/: sbom1013.json  sbom1038.json  sbom178.json  sbom179.json  sbom180.json  sbom181.json  sbom196.json  sbom213.json  sbom233.json  sbom302.json  sbom338.json  sbom342.json  sbom372.json  sbom444.json  sbom446.json  sbom462.json  sbom512.json  sbom537.json  sbom564.json  sbom588.json  sbom594.json  sbom597.json  sbom60.json  sbom64.json  sbom679.json  (+13 more)
(+464 files in other folders)
